[gd_scene load_steps=8 format=3 uid="uid://8i1iogbundoh"]

[ext_resource type="Script" uid="uid://dpfxxljyicr7o" path="res://world/level.gd" id="1_tap5u"]
[ext_resource type="PackedScene" uid="uid://c8g3yu3sot3l4" path="res://player/player_manager.tscn" id="4_3vqyw"]
[ext_resource type="Script" uid="uid://bogtx4pcn0bd" path="res://UIComponents/pause_panel_container.gd" id="5_aohy4"]
[ext_resource type="AudioStream" uid="uid://cty54k5svhrca" path="res://music/action loop.wav" id="5_oh72w"]
[ext_resource type="PackedScene" uid="uid://bdoov14pa7dr4" path="res://UIComponents/retry/retry.tscn" id="5_ype84"]
[ext_resource type="Script" uid="uid://dqo38f2e5kyg2" path="res://world/camera_2d.gd" id="9_iu21s"]

[sub_resource type="Curve2D" id="Curve2D_tap5u"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 2006, 1116, 0, 0, 0, 0, 1992, -79, 0, 0, 0, 0, -94, -93, 0, 0, 0, 0, -100, 1143, 0, 0, 0, 0, 2006, 1116)
}
point_count = 5

[node name="Level" type="Node2D"]
script = ExtResource("1_tap5u")

[node name="BackgroundPolygon" type="Polygon2D" parent="."]
modulate = Color(0.961629, 0.961629, 0.961629, 1)
color = Color(0.57, 0.5472, 0.5016, 1)
polygon = PackedVector2Array(-28, -39, -41, 1161, 2037, 1154, 2009, -51)

[node name="playerManager" parent="." instance=ExtResource("4_3vqyw")]
position = Vector2(940, 380)

[node name="Seeds" type="Node2D" parent="."]

[node name="SpawnPath2D" type="Path2D" parent="."]
curve = SubResource("Curve2D_tap5u")

[node name="InstancePoint" type="PathFollow2D" parent="SpawnPath2D"]
position = Vector2(2006, 1116)
rotation = -1.58251

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="HUD" type="CanvasLayer" parent="."]

[node name="Retry" parent="HUD" instance=ExtResource("5_ype84")]
visible = false
bg_color = Color(0.264662, 0.651978, 0.893742, 1)

[node name="PausePanelContainer" type="PanelContainer" parent="HUD"]
process_mode = 2
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("5_aohy4")

[node name="Label" type="Label" parent="HUD/PausePanelContainer"]
process_mode = 2
layout_mode = 2
text = "Click to continue"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_oh72w")
volume_db = -11.039
autoplay = true

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(960, 540)
script = ExtResource("9_iu21s")

[connection signal="dead" from="playerManager" to="." method="_on_player_manager_dead"]
[connection signal="seed_impact" from="playerManager" to="." method="_on_player_manager_seed_impact"]
[connection signal="won" from="playerManager" to="." method="_on_player_manager_won"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
